docs: add swagger api docs
