# server/src/config/swagger.json
@@ -1,12 +1,199 @@
 {
-    "swagger": "2.0",
-    "info": {
-      "version": "1.0.0"
+  "openapi": "3.0.1",
+  "info": {
+    "title": "Github Search",
+    "description": "This is a github search application to search users and repository",
+    "version": "1.0.0"
+  },
+  "servers": [
+    {
+      "url": "http://localhost:3000/api"
+    }
+  ],
+  "tags": [
+    {
+      "name": "search",
+      "description": "search user or repository"
     },
-    "host": "localhost:3000",
-    "basePath": "/api/",
-    "schemes": ["http"],
-    "produces": ["application/json"],
-    "paths": {
+    {
+      "name": "clear-cache",
+      "description": "clear all cache data"
+    }
+  ],
+  "paths": {
+    "/search": {
+      "post": {
+        "tags": ["search"],
+        "summary": "search a user or repository on github",
+        "operationId": "search",
+        "requestBody": {
+          "description": "search and type",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/SearchRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "400": {
+            "description": "Bad Request",
+            "content": {}
+          },
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "oneOf": [
+                      {
+                        "$ref": "#/components/schemas/User"
+                      },
+                      {
+                        "$ref": "#/components/schemas/Repository"
+                      }
+                    ]
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/clear-cache": {
+      "get": {
+        "tags": ["clear-cache"],
+        "summary": "clear data from cache",
+        "operationId": "clear-cache",
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+            }
+          }
+        }
+      }
+    }
+  },
+  "components": {
+    "schemas": {
+      "SearchRequest": {
+        "type": "object",
+        "properties": {
+          "type": {
+            "type": "string",
+            "description": "type of search",
+            "enum": ["repository", "user"]
+          },
+          "search": {
+            "description": "search keyword",
+
+            "type": "string"
+          }
+        }
+      },
+
+      "User": {
+        "type": "object",
+        "properties": {
+          "login": {
+            "type": "string"
+          },
+          "url": {
+            "type": "string"
+          },
+          "type": {
+            "type": "string"
+          },
+          "name": {
+            "type": "string"
+          },
+          "company": {
+            "type": "string"
+          },
+          "blog": {
+            "type": "string"
+          },
+          "location": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "public_repos": {
+            "type": "number"
+          },
+          "public_gists": {
+            "type": "number"
+          },
+          "followers": {
+            "type": "number"
+          },
+          "following": {
+            "type": "number"
+          }
+        }
+      },
+      "Repository": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "full_name": {
+            "type": "string"
+          },
+          "private": {
+            "type": "boolean"
+          },
+
+          "owner_login": {
+            "type": "string"
+          },
+          "owner_html_url": {
+            "type": "string"
+          },
+
+          "html_url": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string"
+          },
+          "size": {
+            "type": "number"
+          },
+          "stargazers_count": {
+            "type": "number"
+          },
+          "watchers_count": {
+            "type": "number"
+          },
+          "language": {
+            "type": "string"
+          },
+          "forks_count": {
+            "type": "number"
+          },
+          "open_issues_count": {
+            "type": "number"
+          },
+          "forks": {
+            "type": "number"
+          },
+          "open_issues": {
+            "type": "number"
+          },
+          "watchers": {
+            "type": "number"
+          }
+        }
+      }
     }
   }
+}
